# warabi

./: .gitignore  LICENSE  README.md  Taskfile.yml  main.py  pyproject.toml  test_warabi.py
.github/instructions/: specs.instructions.md
benches/: test_tokenize_performance.py
instructions/: git.instructions.md
src/hechima/: __init__.py
src/hechima/tokenizer/: janome_tokenizer.py  sudachi_tokenizer.py
src/warabi/: __init__.py  common.py  db.py  fts.py  full_text_search.py
src/warabi/fts/: __init__.py  sqlite3_fts.py
src/warabi/kvs/: __init__.py  tinydb_kvs.py
src/warabi/tokenizer/: __init__.py  janome_tokenizer.py  sudachi_tokenizer.py
tests/fts/: test_sqlite3_fts.py
tests/kvs/: test_tinydb_kvs.py
tests/tokenizer/: test_janome_tokenizer.py  test_sudachi_tokenizer.py
tests/unit/: test_fts.py
