[project]
name = "hechima"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shimo8810", email = "shimo.8810@gmail.com" },
]
requires-python = ">=3.13"
dependencies = ["janome>=0.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.1", "ruff>=0.12.3", "ty>=0.0.1a14"]

[tool.ruff]
line-length = 80
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle Errors
    "W",   # pycodestyle Warning
    "C90", # mccabe
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "PT",  # flake8-pytest-style
]
